--- a/Project_Files/static/styles/style.css
+++ b/Project_Files/static/styles/style.css
@@ -15,41 +15,55 @@ body {
     background: #fafafa;
 }
 
-@media (min-width: 992px) {
-    body {
-        padding-top: 56px;
-    }
-}
-
 #overlay {
     position: fixed;
     display: none;
-    width: 100%;
-    height: 100%;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(100,100,100,0.7);
-    cursor: pointer;
+    background-color: rgba(100,100,100,0.8);
 }
 
 #overlay-inner {
-    position: absolute;
+    position: inherit;
     display: none;
     top: 50%;
     left: 50%;
     background-color: white;
+    border-radius: 10px;
     transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%,-50%);
 }
 
-#form-login {
+#signup-section {
+    min-width: 100px;
+    margin-bottom: 10px;
+    display: inline-grid;
+}
+
+#signin-section {
+    min-width: 100px;
+    display: inline;
     float: left;
 }
 
-#form-signup {
+.form-signin > .form-control {
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
 
+.form-signin > h2 {
+    margin-top: 10px;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.middle-border {
+    margin: 10px;
+    min-height: 300px;
+    border-right-style: solid;
+    border-radius: 2px;
+    border-color: aqua;
 }
 
 .carousel-item {
@@ -171,7 +185,7 @@ img {
 
 .gallery {
     position: relative;
-    z-index: 2;
+    z-index: 0;
     padding: 10px;
     display: -webkit-box;
     display: -ms-flexbox;
